# themis-data-api-py

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: main.py
api/config/: main.py
api/routers/: deputados.py  legislatura.py  legislaturas.py
db/: base.py  session.py
fetcher/: main.py  utils.py
fetcher/camara/: types.py
fetcher/camara/classes/: deputado_resource.py  despesa_resource.py  legislatura_resource.py  resource.py
fetcher/camara/config/: api.py  data_file.py
fetcher/camara/db/: main.py  session.py
fetcher/camara/models/: Deputado.py  Despesas.py  Legislatura.py
fetcher/camara/resources/: base.py  deputado.py  despesas.py  legislatura.py
fetcher/camara/schemas/: Deputado.py  Despesa.py  Legislatura.py
fetcher/config/: data_file.py
fetcher/core/: job.py  job_runner.py  resource.py  resource_factory.py  scheduler.py  storage.py
fetcher/decorators/: log.py
fetcher/seed/: jobs.py
migrations/: 0010_create_jobs_table.sql  0020_create_legislaturas_table.sql  0030_create_deputados_table.sql  0200_create_despesas_deputado.sql  env.py
migrations/versions/: 16b9ba954471_create_deputados_table.py  d599383c15f2_create_legislaturas_table.py  f70b787ed180_create_despesas_table.py
src/api/: main.py
src/api/auth/: header_auth.py
src/api/classes/: query.py  response.py
src/config/: db.py
src/db/: session.py
src/fetcher/: main.py
src/typings/: deputado.py  despesa_deputado.py  legislatura.py
types/: deputado.py  despesa.py  legislatura.py
typings/: deputado.py  despesa.py  despesa_deputado.py  legislatura.py
(+25 files in other folders)
