[project]
name = "themis-data-api-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Pereira",email = "129459113+mpaulo315@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "croniter (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
